// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadwayDiagram renders a gapped vehicle 1`] = `
<div
  className="m-headway-diagram"
>
  <div
    className="m-headway-diagram__route-line-background"
  />
  <div
    className="m-headway-diagram__vehicles"
  >
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway bunched"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        -4.4 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        bunched
      </div>
    </div>
    <div
      className="m-headway-diagram__selected-vehicle"
    >
      <svg
        style={
          Object {
            "height": 38.5,
            "width": 26,
          }
        }
        viewBox="-13 -13.75 26 38.5"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={12.75}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={18.25}
          >
            1889
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway gapped"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        +8.9 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        gapped
      </div>
    </div>
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`HeadwayDiagram renders an ok headway vehicle 1`] = `
<div
  className="m-headway-diagram"
>
  <div
    className="m-headway-diagram__route-line-background"
  />
  <div
    className="m-headway-diagram__vehicles"
  >
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway bunched"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        -4.4 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        bunched
      </div>
    </div>
    <div
      className="m-headway-diagram__selected-vehicle"
    >
      <svg
        style={
          Object {
            "height": 38.5,
            "width": 26,
          }
        }
        viewBox="-13 -13.75 26 38.5"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={12.75}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={18.25}
          >
            1780
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway ok"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        +7.2 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        good
      </div>
    </div>
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`HeadwayDiagram renders with next and previous vehicles 1`] = `
<div
  className="m-headway-diagram"
>
  <div
    className="m-headway-diagram__route-line-background"
  />
  <div
    className="m-headway-diagram__vehicles"
  >
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway bunched"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        -4.4 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        bunched
      </div>
    </div>
    <div
      className="m-headway-diagram__selected-vehicle"
    >
      <svg
        style={
          Object {
            "height": 38.5,
            "width": 26,
          }
        }
        viewBox="-13 -13.75 26 38.5"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={12.75}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={18.25}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway bunched"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        -4.4 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        bunched
      </div>
    </div>
    <div
      className="m-headway-diagram__other-vehicle"
      onClick={[Function]}
    >
      <svg
        style={
          Object {
            "height": 27.72,
            "width": 26,
          }
        }
        viewBox="-13 -8.36 26 27.72"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--small"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.38) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`HeadwayDiagram renders with no next or previous vehicles 1`] = `
<div
  className="m-headway-diagram"
>
  <div
    className="m-headway-diagram__route-line-background"
  />
  <div
    className="m-headway-diagram__vehicles"
  >
    <div
      className="m-headway-diagram__headway ok"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        +0.0 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        good
      </div>
    </div>
    <div
      className="m-headway-diagram__selected-vehicle"
    >
      <svg
        style={
          Object {
            "height": 38.5,
            "width": 26,
          }
        }
        viewBox="-13 -13.75 26 38.5"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={12.75}
          />
          <text
            className="m-vehicle-icon__label"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={18.25}
          >
            1804
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(90) translate(-24,-22)"
          />
        </g>
      </svg>
    </div>
    <div
      className="m-headway-diagram__headway bunched"
    >
      <div
        className="m-headway-diagram__headway-amount"
      >
        -4.4 min
      </div>
      <div
        className="m-headway-diagram__headway-line"
      />
      <div
        className="m-headway-diagram__headway-status"
      >
        bunched
      </div>
    </div>
  </div>
</div>
`;
